--- a/.vscode/en.html
+++ b/.vscode/en.html
@@ -35,6 +35,17 @@ table,th,tr,td{
         </tr>
         </table>
     </table>
+    <style>
+    div{
+        height: 300px;
+        width:300px;
+        background-color: rgb(68, 116, 156);
+        border: 10px solid black;
+        margin-left: 50px;
+
+    }
+    </style>
+    
     //anchor Tags
     <a href="https://www.linkedin.com/in/sharmila-devaraj-629b6b34a/">Linkedin</a>
     <div class="abc">
